--- a/Sections/Introduction.tex
+++ b/Sections/Introduction.tex
@@ -10,8 +10,8 @@ gradient-based optimization with multiple starting points becomes the best, and 
 
 Three main methods exist to decrease wake interactions among wind turbines in a wind farm: layout optimization, yaw control, and turbine design. The wind farm layout optimization problem has been widely studied in recent years. There is abundant literature from the research community discussing various methods to approach the wind farm layout optimization problem including gradient-free methods \citep{marmidis2008optimal,emami2010new,kusiak2010design,ituarte2011optimization,feng2015solving,gao2015wind} and gradient-based methods \citep{perez2013offshore,park2015layout,Fleming2016,guirguis2016toward,gebraad2017maximization}. The premise of layout optimization is simple: design the wind farm layout such that wake interactions among turbines are minimal.
 However, the problem is more challenging than it may initially seem. 
-The space of a wind farm is constrained, so for all realistic wind roses any turbine layout will have some wind turbines that are waked or partially waked some or all of the time. Therefore, to find the best layout often non-obvious tradeoffs must be made to minimize wake interactions throughout the entire farm.
-Also, the number of wake simulations to model a wind farm scales with the square of the number of turbines, becoming computationally expensive for farms with many turbines. Another challenge comes from the extreme multi-modality of the design space. For farms with many wind turbines it becomes impossible to know if a solution is the global optimal solution or just a local optimum.  Additional complexity arises from the stochastic nature of wind. Although often treated as deterministic, annual wind direction and speed distributions are uncertain and variable, meaning that the optimal wind farm layout for one year may not be optimal the next.
+The space of a wind farm is constrained, so for all realistic wind roses, any turbine layout will have some wind turbines that are waked or partially waked some or all of the time. Therefore, to find the best layout often non-obvious tradeoffs must be made to minimize wake interactions throughout the entire farm.
+Also, the number of wake simulations to model a wind farm scales with the square of the number of turbines, becoming computationally expensive for farms with many turbines. Another challenge comes from the extreme multi-modality of the design space. For farms with many wind turbines, it becomes impossible to know if a solution is the global optimal solution or just a local optimum.  Additional complexity arises from the stochastic nature of wind. Although often treated as deterministic, annual wind direction and speed distributions are uncertain and variable, meaning that the optimal wind farm layout for one year may not be optimal the next.
 
 
 
