--- a/Sections/wake_model.tex
+++ b/Sections/wake_model.tex
@@ -5,7 +5,7 @@ The total velocity deficit at any given point was defined as the square root of 
 \begin{equation}
 L = \sqrt{\sum_{i=1}^\text{nTurbs}L_i^2}
 \end{equation}
-\noindent Variations of the free stream wind speed with height are calculated with the wind profile power law: 
+\noindent Variations of the free stream wind speed with height were calculated with the wind profile power law: 
 \begin{equation}
 V = V_{\text{ref}}\Big(\frac{z}{z_{\text{ref}}}\Big)^\alpha
 \label{Eq:shear}
