--- a/coupled-layout-design.tex
+++ b/coupled-layout-design.tex
@@ -33,7 +33,7 @@
 
 
 \begin{abstract}
-In this study, wind farms were optimized to show the benefit of coupling turbine design and layout optimization, as well as including different turbine designs in a single wind farm. For our purposes, turbine design included hub height, rotor diameter, rated power, tower diameter, tower shell thickness, and implicit blade chord and twist distributions. A 32-turbine wind farm and a 60-turbine wind farm were both considered, as well as a variety of turbine spacings and wind shear exponents. Structural constraints as well as turbine costs were considered in the optimization. Results indicate that coupled turbine design and layout optimization is superior to sequentially optimizing turbine design, then turbine layout. Coupled optimization results in an additional  2--5\% reduction in cost of energy compared to optimizing sequentially. Furthermore, wind farms with closely spaced wind turbines can greatly benefit from non-uniform turbine design throughout the farm. Some of these wind farms with heterogeneous turbine design have an additional 10\% cost of energy reduction compared to wind farms with identical turbines throughout the farm.
+In this study, wind farms were optimized to show the benefit of coupling turbine design and layout optimization, as well as including different turbine designs in a single wind farm. For our purposes, turbine design included hub height, rotor diameter, rated power, tower diameter, tower shell thickness, and implicit blade chord and twist distributions. A 32-turbine wind farm and a 60-turbine wind farm were both considered, as well as a variety of turbine spacings and wind shear exponents. Structural constraints as well as turbine costs were considered in the optimization. Results indicate that coupled turbine design and layout optimization is superior to sequentially optimizing turbine design, then turbine layout. Coupled optimization results in an additional  2--5\% reduction in cost of energy compared to optimizing sequentially. Furthermore, wind farms with closely spaced wind turbines can greatly benefit from non-uniform turbine design throughout the farm. Some of these wind farms with heterogeneous turbine design have an additional 10\% cost-of-energy reduction compared to wind farms with identical turbines throughout the farm.
 \end{abstract}
 
 
