--- a/Sections/optimization.tex
+++ b/Sections/optimization.tex
@@ -7,13 +7,13 @@ Rather than optimize each turbine, we chose two groups because our previous stud
   \caption{\label{tower_def} The parameterized turbine tower definition. The tower diameter and shell thickness are defined at the bottom, midpoint, and top of the tower, with the values linearly interpolated in between.}
 \end{figure}
         
-        It may be beneficial to do a binary optimization in which each turbine can change the turbine group to which it belongs, but this greatly increases the complexity of the optimization and makes it gradient-free. Gradient-free optimization is more computationally expensive, which severely limits the number of design variables we can include in the problem. To maintain the gradient-based optimization, we assigned each turbine to one of the groups before starting the optimization. Although the turbines can move throughout the wind farm, once assigned a turbine could not switch to the other group. In this study, we only examine an equal weighting of turbines in each group, but additional benefit may come from optimally choosing the number of turbines in each group.
+        It may be beneficial to do a binary optimization in which each turbine can change the turbine group to which it belongs, but this greatly increases the complexity of the optimization and makes it gradient-free. Gradient-free optimization is more computationally expensive, which severely limits the number of design variables we can include in the problem. To maintain the gradient-based optimization, we assigned each turbine to one of the groups before starting the optimization. Although the turbines could move throughout the wind farm, once assigned a turbine could not switch to the other group. In this study, we only examined an equal weighting of turbines in each group, but additional benefit may come from optimally choosing the number of turbines in each group.
         
-        We ran several cases in which different design variables were included in the problem to allow comparison of their effects on COE. In all, the design variables we included were the position of each turbine ($x_i,y_i$), the tower height of each group ($H_1, H_2$), the rotor diameter of each group ($D_1, D_2$), the rated power of each group ($R_1, R_2$), the tower diameter of each group ($d_{1,j}, d_{2,j}$), and the tower shell thickness of each group ($t_{1,j}, t_{2,j}$). Index j refers location on the tower (j=1 is at the bottom, j=2 at the midpoint, j=3 at the top), meaning there are six total variables to define diameter (three for each height group), and six to define the tower shell thickness.
+        We ran several cases in which different design variables were included in the problem to allow comparison of their effects on COE. In all, the design variables we included were the position of each turbine ($x_i,y_i$), the tower height of each group ($H_1, H_2$), the rotor diameter of each group ($D_1, D_2$), the rated power of each group ($R_1, R_2$), the tower diameter of each group ($d_{1,j}, d_{2,j}$), and the tower shell thickness of each group ($t_{1,j}, t_{2,j}$). Index j refers location on the tower (j=1 is at the bottom, j=2 at the midpoint, j=3 at the top), meaning there are six total variables to define diameter (three for each height group), and six to define the tower shell thickness. The blade chord and twist distributions also varied during the optimization, however these were implicit design variables.
                 
           The turbine layout and structural constraints were previously formulated in our multiple-hub-height study \citep{stanley2018}. Because rotor diameter was a design variable, the turbine spacing constraint was slightly reformulated such that the distance between any two turbines in the wind farm was greater than the sum of the two rotor diameters.
            The rotor diameter and the turbine rating were constrained by the lowest and highest values that were included in the RotorSE optimization, as discussed in Sect. \ref{rotor_nacelle}.
-           The lower limits were never active in these optimizations, however some of the upper limits were active as will be seen in the Results section.
+           The lower limits were never active in these optimizations; however, some of the upper limits were active as will be seen in the Results section.
        The optimization can be expressed:
         
         
@@ -39,18 +39,19 @@ Rather than optimize each turbine, we chose two groups because our previous stud
 			\end{aligned}
 		\end{equation}
 %
-Note that i is the index defining the wind turbine, and j is the index describing the location on the tower.
+Note that $i$ is the index defining the wind turbine, and $j$ is the index describing the location on the tower.
         
-        The gradients for this optimization were all analytic. We calculated the partial derivatives of each small section of the model and included each part in a framework called OpenMDAO, which calculates the gradients of the entire system \citep{gray2010openmdao}. The analytic gradients are significant because they are more accurate, converge to better solutions, and converge on the solution much faster that finite difference gradients. More importantly, they allow us to solve much larger optimization problems. 
+        The gradients for this optimization were all analytic. We calculated the partial derivatives of each small section of the model and included each part in a framework called OpenMDAO, which calculated the gradients of the entire system \citep{gray2010openmdao}. The analytic gradients were significant because they were more accurate, converged to better solutions, and converged on the solution much faster that finite difference gradients. More importantly, they allowed us to solve much larger optimization problems than would have been possible without. 
         
 We optimized two different wind farms, each with several different wind shear exponents and turbine spacing multipliers as will be explained later in this section. 
-The first wind farm is a fictional 32-turbine wind farm with a circular boundary, shown in Fig. \ref{layouts}.
+The first wind farm was a fictional 32-turbine wind farm with a circular boundary, shown in Fig. \ref{layouts}.
 This wind farm was optimized with wind data from the city of Alturas, California, shown in Fig. \ref{wind_roses}. For lack of reliable data, the average wind speed, $V_{\text{mean}}$, from each direction of this wind rose was assumed to be eight meters per second, shown in Fig \ref{wind_speeds}.
-The second wind farm is the Princess Amalia wind farm, a real farm off the coast of the Netherlands which has 60 wind turbines, is shown in Fig. \ref{layouts}. This wind farm was optimized with the wind direction and average directional speed data from the true Princess Amalia farm, shown in Figs. \ref{wind_roses} and \ref{wind_speeds}. The farm boundary for the Princess Amalia wind farm is the convex hull of the original Princess Amalia layout. The baseline turbine layout and boundaries are shown in Fig. \ref{layouts}. The turbines in both wind farms are Vestas 2 Megawatt wind turbines, which have a rotor diameter of 80 meters. Therefore, we used a baseline rotor diameter of 80 meters and a baseline power rating of 2 Megawatts. The baseline hub height used in this study was 100 meters. 
+The second wind farm was the Princess Amalia wind farm, a real farm off the coast of the Netherlands which has 60 wind turbines, is shown in Fig. \ref{layouts}. This wind farm was optimized with the wind direction and average directional speed data from the true Princess Amalia farm, shown in Figs. \ref{wind_roses} and \ref{wind_speeds}. The farm boundary for the Princess Amalia wind farm was the convex hull of the original Princess Amalia layout. 
+The turbines in the Princess Amalia wind farm are Vestas 2 Megawatt wind turbines, which have a rotor diameter of 80 meters. Therefore, for both wind farms we used a baseline rotor diameter of 80 meters and a baseline power rating of 2 Megawatts. The baseline hub height used in this study was 100 meters. 
 
 \begin{figure}[htbp]
   \centering
-   \includegraphics[trim={0 0.5cm 0 0.5cm},clip,width=0.7\textwidth]{Figures/baseline_layouts.pdf}
+   \includegraphics[trim={0 0.5cm 0 0.4cm},clip,width=0.7\textwidth]{Figures/baseline_layouts.pdf}
   \caption{\label{layouts} The two different wind farm designs that were optimized. On the left is a contrived circular wind farm design with 32 turbines. On the right is the Princess Amalia wind farm, an offset grid design with 60 wind turbines. }
 \end{figure}
 %
@@ -69,7 +70,7 @@ The second wind farm is the Princess Amalia wind farm, a real farm off the coast
 \end{figure}
 
 
-We optimized each of the wind farms shown in Fig. \ref{layouts} with three different wind shear exponents (0.075, 0.175, 0.275), and three different spacing multipliers (0.5, 1.0, 1.5). The wind shear exponent defines how fast the wind speed changes with height, as seen in Equation \ref{Eq:shear}. Low shear exponents are typical over open water or flat plains, while higher shear exponents exist in areas with a lot of large trees or buildings. Figure \ref{shear_profile} shows the wind speed profiles of the three shear exponents we used. For a shear exponent of 0.075, there is only an 8.6\% increase in the wind speed from the reference height of 50 meters to 150 meters. For a shear exponent of 0.175 there is a wind speed increase of 21.2\% for the same height difference, and for a shear exponent of 0.275 the wind speed increase is 35.3\% from 50 to 150 meters. We also optimized each wind farm for different turbine spacings by adjusting the turbine locations by some spacing multiplier, $\beta$.  This is simply some constant multiplied to each turbine location. The wind farm boundaries were adjusted accordingly with the spacing multipliers, meaning the radius of the circular wind farm was also multiplied by the spacing multiplier, and the convex hull of the Princess Amalia farm was applied to the adjusted turbine locations. Figure \ref{farm_spacings} shows both of the wind farms adjusted by the spacing multipliers, as well as the turbine spacing in baseline rotor diameters. As the turbine designs are optimized, these spacings (in rotor diameters) will increase or decrease according. Note that in the circular wind farm, the turbine distances are presented in the rows closely inline with the dominant wind direction (ten degrees south of west, see Fig. \ref{wind_roses}). The closest neighboring turbines are actually $\sqrt{2}/2$ multiplied by this value. 
+We optimized both of the wind farms shown in Fig. \ref{layouts} with three different wind shear exponents (0.075, 0.175, 0.275), and three different spacing multipliers (0.5, 1.0, 1.5). The wind shear exponent defines how fast the wind speed changes with height, as seen in Equation \ref{Eq:shear}. Low shear exponents are typical over open water or flat plains, while higher shear exponents exist in areas with obstructions, such as large trees or buildings. Figure \ref{shear_profile} shows the wind speed profiles of the three shear exponents we used. For a shear exponent of 0.075, there is only an 8.6\% increase in the wind speed from the reference height of 50 meters to 150 meters. For a shear exponent of 0.175 there is a wind speed increase of 21.2\% for the same height difference, and for a shear exponent of 0.275 the wind speed increase is 35.3\% from 50 to 150 meters. We also optimized each wind farm for different turbine spacings by adjusting the turbine locations by some spacing multiplier, $\beta$, which is simply some constant multiplied to each turbine location. The wind farm boundaries were adjusted accordingly with the spacing multipliers, meaning the radius of the circular wind farm was also multiplied by the spacing multiplier, and the convex hull of the Princess Amalia farm was applied to the baseline turbine locations adjusted by the spacing multiplier. Figure \ref{farm_spacings} shows both of the wind farms adjusted by the spacing multipliers, as well as the turbine spacing in baseline rotor diameters. As the turbine designs were optimized, these spacings (in rotor diameters) increased or decreased according to the new rotor diameters. Note that in the circular wind farm, the turbine distances are presented in the rows closely inline with the dominant wind direction (ten degrees south of west, see Fig. \ref{wind_roses}). The closest neighboring turbines are actually $\sqrt{2}/2$ multiplied by this value. 
 
 
 \begin{figure}[htbp]
@@ -84,4 +85,4 @@ We optimized each of the wind farms shown in Fig. \ref{layouts} with three diffe
   \caption{\label{farm_spacings}The six wind farm boundaries and associated baseline layouts optimized in this study. The same two layouts were multiplied by a spacing multiplier, $\beta=0.5,1.0,1.5$, which changed the wind farm size and the averaging spacing between wind turbines.  On the top is the 32-turbine, circular wind farm, and on the bottom is the 60-turbine, Princess Amalia wind farm. The turbine spacings, in baseline rotor diameters, are also displayed for each spacing multiplier in this figure.}
 \end{figure}
 
-The results of gradient-based optimization, especially for problems with many local minima, are sensitive to the starting location. As in most optimization problems, there is no guarantee that the solution is the global solution. The best results can be achieved with a multiple-start approach, where several different starting points are used for each condition, and the best solution is used. In our study, we ran fifty to hundreds of starting locations for each optimization case. For every optimization, we started each turbine location from the Princess Amalia or circular wind farm baseline locations in Fig. \ref{farm_spacings}, each perturbed by a random amount. All of the other design variables were initialized randomly.
+The results of gradient-based optimization, especially for problems with many local minima, are sensitive to the starting location. As in most optimization problems, there is no guarantee that the solution is the global solution. The best results can be achieved with a multiple-start approach, where several different starting points are used for each condition, and the best solution is used. In our study, we ran fifty to hundreds of starting locations for each optimization case. For every optimization, we started each turbine location from the Princess Amalia or circular wind farm baseline locations in Fig. \ref{farm_spacings}, each perturbed by a random amount. All of the other design variables were initialized randomly for each optimization.
